--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@
 
 /* This sets the background colour, font colour, font style (weight and size). 
 - The font-family picks 'lato' first and if the website is unable to load that font style then it goes to Arial and then san-serif as our default.
-- Because this is common amonst all field we will declare it in here and anything specific can be delcayred/set later on.
+- Because this is common amonst all field we will declare it in here and anything specific can be delcared/set later on.
 - The 'optimizeLegibility' emphasizes legibility over rendering speed and geometric precision. */
 html {
     background colour: #8d8d8d;
@@ -15,4 +15,96 @@ html {
     font-weight: 200;
     font-size: 18px;
     text-rendering: optimizeLegibility;
+}
+/* this will keep the text centred in the way we want */
+.row {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+    
+/*====================================================================================================*/
+/*=========================================  HEADER  =================================================*/
+/*====================================================================================================*/
+
+header {
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0, 0, 0, 0.5)), url(img/background.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh; /* This makes the image fill up the view, aka full screen */
+}
+
+.hero-text-box{
+    position: absolute;
+    width: 1140px;
+    top: 60%;
+    left: 55%;
+}
+
+h1 {
+    margin: 0;
+    color: aliceblue;
+    font-size: 300%;
+    font-weight: 300;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 50px;
+}
+
+.navigation{
+    float: right;
+    list-style: none;
+}
+
+.navigation li{
+    display: inline-block;
+    margin-left: 50px;
+    margin-top: 80px;
+}
+
+.navigation li a:link,
+.navigation li a:visited{
+    color: aliceblue;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 100%;
+}
+
+.navigation li a:hover,
+.navigation li a:active{
+    
+    border-bottom: 3px solid #fff;
+}
+/*====================================================================================================*/
+/*=========================================  BUTTONS  ================================================*/
+/*====================================================================================================*/
+
+/*The things both button have in common are written below and the specific buttons will be done below*/
+.button:link,
+.button:visited{
+    display: inline-block;
+    padding: 10px 20px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    color: aliceblue;
+    margin: 8px 2px;
+}
+
+.filled-button:link,
+.filled-button:visited{
+    background-color: #000;
+    border: 1px solid #000;
+}
+
+.filled-button:hover,
+.filled-button:active{
+    background-color: #fff;
+    border: 1px solid #fff;
+    color: #000;
 }
